RESOLVED FIXED219606
Fix incorrect capitalization of ClearWheelEventTestMonitor IPC message name
https://bugs.webkit.org/show_bug.cgi?id=219606
Summary Fix incorrect capitalization of ClearWheelEventTestMonitor IPC message name
Tim Horton
Reported 2020-12-07 11:28:01 PST
Fix incorrect capitalization of ClearWheelEventTestMonitor IPC message name
Attachments
Patch (1.82 KB, patch)
2020-12-07 11:28 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-12-07 11:28:28 PST
EWS
Comment 2 2020-12-07 12:03:07 PST
Committed r270512: <https://trac.webkit.org/changeset/270512> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415568 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-07 12:04:20 PST
Note You need to log in before you can comment on or make changes to this bug.