Fix incorrect capitalization of ClearWheelEventTestMonitor IPC message name https://bugs.webkit.org/show_bug.cgi?id=219606

Reviewed by Wenson Hsieh.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::clearWheelEventTestMonitor):
* WebProcess/WebPage/WebPage.messages.in:


Canonical link: https://commits.webkit.org/232189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270512 268f45cc-cd09-0410-ab3c-d52691b4dbfc